SotBE: Add [show_if] to the objectives tag

--- a/data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg
+++ b/data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg
@@ -21,6 +21,39 @@
             [objective]
                 description= _ "Defeat Lanbec’h"
                 condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL prepare_retreat boolean_equals no}
+                    {VARIABLE_CONDITIONAL retreat boolean_equals no}
+                [/show_if]
+            [/objective]
+            [objective]
+#ifdef EASY
+                description= _ "Resist until your people are ready to go (turn 12)"
+#endif
+#ifdef NORMAL
+                description= _ "Resist until your people are ready to go (turn 13)"
+#endif
+#ifdef HARD
+                description= _ "Resist until your people are ready to go (turn 14)"
+#endif
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL prepare_retreat boolean_equals yes}
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Then move Kapou’e to the signpost in the northeast"
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL prepare_retreat boolean_equals yes}
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Move Kapou’e to the signpost in the northeast"
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL retreat boolean_equals yes}
+                [/show_if]
             [/objective]
             [objective]
                 description= _ "Death of Kapou’e"
@@ -197,34 +230,10 @@
 
         {PLACE_IMAGE scenery/signpost.png 28 1}
 
-        [objectives]
-            side=1
-            [objective]
-#ifdef EASY
-                description= _ "Resist until your people are ready to go (Turn 12)"
-#endif
-#ifdef NORMAL
-                description= _ "Resist until your people are ready to go (Turn 13)"
-#endif
-#ifdef HARD
-                description= _ "Resist until your people are ready to go (Turn 14)"
-#endif
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Then move Kapou’e to the signpost in the Northeast"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Death of Kapou’e"
-                condition=lose
-            [/objective]
+        {VARIABLE prepare_retreat yes}
 
-            [gold_carryover]
-                bonus=no
-                carryover_percentage=40
-            [/gold_carryover]
-        [/objectives]
+        [show_objectives]
+        [/show_objectives]
     [/event]
 
     [event]
@@ -265,24 +274,8 @@
             message= _ "Took you long enough. Let’s go!"
         [/message]
 
-        [objectives]
-            side=1
-            [objective]
-                description= _ "Move Kapou’e to the signpost in the Northeast"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Death of Kapou’e"
-                condition=lose
-            [/objective]
-
-            {TURNS_RUN_OUT}
-
-            [gold_carryover]
-                bonus=no
-                carryover_percentage=40
-            [/gold_carryover]
-        [/objectives]
+        {CLEAR_VARIABLE prepare_retreat}
+        {VARIABLE retreat yes}
 
         [if]
             [have_unit]
@@ -296,6 +289,10 @@
                     name=Kapoue_leaves
                 [/fire_event]
             [/then]
+            [else]
+                [show_objectives]
+                [/show_objectives]
+            [/else]
         [/if]
 
         [event]
@@ -331,6 +328,8 @@
             message= _ "In your dreams, worm. When the time comes you will pay for all this with your life!"
             image=portraits/kapoue-angry.png
         [/message]
+
+        {CLEAR_VARIABLE retreat}
 
         [endlevel]
             result=victory
