--- a/data/campaigns/Son_Of_The_Black_Eye/scenarios/03_Toward_Mountains_of_Haag.cfg
+++ b/data/campaigns/Son_Of_The_Black_Eye/scenarios/03_Toward_Mountains_of_Haag.cfg
@@ -35,12 +35,29 @@
                 condition=lose
                 description=_ "Death of Kapou’e"
             [/objective]
+            [objective]
+                condition=lose
+                description=_ "Death of Grüü"
+                [show_if]
+                    [have_unit]
+                        id=Grüü
+                    [/have_unit]
+                [/show_if]
+            [/objective]
 
             {TURNS_RUN_OUT}
 
             [gold_carryover]
                 carryover_percentage=40
             [/gold_carryover]
+            [note]
+                description= _ "In this scenario, you may ask Grüü to move to any hex by right-clicking on that hex."
+                [show_if]
+                    [have_unit]
+                        id=Grüü
+                    [/have_unit]
+                [/show_if]
+            [/note]
         [/objectives]
     [/event]
 
@@ -298,34 +315,8 @@
             message= _ "Right, my son. We help our orcish friends. But you take care... I would be desperate if something happened to you."
         [/message]
 
-        [objectives]
-            side=1
-            [objective]
-                condition=win
-                description=_ "Move Kapou’e to the end of the mountains or"
-            [/objective]
-            [objective]
-                condition=win
-                description= _ "Defeat the enemy leader"+{EARLY_FINISH_BONUS_FOOTNOTE}
-            [/objective]
-            [objective]
-                condition=lose
-                description=_ "Death of Kapou’e"
-            [/objective]
-            [objective]
-                condition=lose
-                description=_ "Death of Grüü"
-            [/objective]
-
-            {TURNS_RUN_OUT}
-
-            [gold_carryover]
-                carryover_percentage=40
-            [/gold_carryover]
-            [note]
-                description= _ "In this scenario, you may ask Grüü to move to any hex by right-clicking on that hex."
-            [/note]
-        [/objectives]
+        [show_objectives]
+        [/show_objectives]
     [/event]
 
     [event]
