--- a/data/campaigns/Son_Of_The_Black_Eye/scenarios/15_Civil_War.cfg
+++ b/data/campaigns/Son_Of_The_Black_Eye/scenarios/15_Civil_War.cfg
@@ -22,10 +22,31 @@
             [objective]
                 condition=win
                 description=_ "Defeat all rebel leaders and..."
+                [show_if]
+                    [have_unit]
+                        id=Braga, Meato, Ragvan, Kergai
+                    [/have_unit]
+                [/show_if]
             [/objective]
             [objective]
                 condition=win
                 description=_ "Then move Kapou’e to the signpost in the southwest"
+                [show_if]
+                    [have_unit]
+                        id=Braga, Meato, Ragvan, Kergai
+                    [/have_unit]
+                [/show_if]
+            [/objective]
+            [objective]
+                condition=win
+                description=_ "Move Kapou’e to the signpost in the southwest"
+                [show_if]
+                    [not]
+                        [have_unit]
+                            id=Braga, Meato, Ragvan, Kergai
+                        [/have_unit]
+                    [/not]
+                [/show_if]
             [/objective]
             [objective]
                 condition=lose
@@ -385,30 +406,8 @@
                     message= _ "Now let’s get going, we have an appointment with Shan Taum."
                 [/message]
 
-                [objectives]
-                    side=1
-                    [objective]
-                        condition=win
-                        description=_ "Move Kapou’e to the signpost in the southwest"
-                    [/objective]
-                    [objective]
-                        condition=lose
-                        description=_ "Death of Kapou’e"
-                    [/objective]
-                    [objective]
-                        condition=lose
-                        description= _ "Death of Grüü"
-                    [/objective]
-
-                    {TURNS_RUN_OUT}
-
-                    [gold_carryover]
-                        bonus=yes
-                        carryover_percentage=40
-                    [/gold_carryover]
-
-                    {GREAT_HORDE_NOTE}
-                [/objectives]
+                [show_objectives]
+                [/show_objectives]
             [/then]
         [/if]
 
