TSG S4: dialogue revision

--- a/data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg
@@ -583,7 +583,7 @@
 
         [message]
             speaker=Jera Ilras
-            message= _ "You’re too late! Even if you could find our stronghold, you will never defeat our master!"
+            message= _ "Fools, my death here means nothing! Even if you could find our stronghold, you will never defeat our master!"
         [/message]
 
         [message]
