TSG S3: dialogue revision

--- a/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
@@ -433,7 +433,7 @@
         [message]
             speaker=Ethiliel
             # wmllint: local spelling Elrath
-            message= _ "Stay your hand, Linderion. This man bears the banner of Wesnoth and appears to come to us in peace. What brings you to the hallowed citadel of Elrath?"
+            message= _ "Stay your hand, Linderion. This man bears the banner of Wesnoth and appears to come to us in peace. What brings you to the hallowed grove of Elrath?"
         [/message]
 
         [message]
