SoF: Alanin is no more a leader
In the scenarios where one plays him he retains now his usual overlay.
Master only, as the scenarios depend on changes in previous scenarios,
which breakssave compatibility.
[ci skip]

--- a/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
@@ -12,11 +12,10 @@
     {DEFAULT_SCHEDULE}
 
     [side]
-        id=Alanin
-        type=Dragoon
+        no_leader=yes
+        defeat_condition=no_units_left # actually: Alanin dies
         save_id=Rugnur
         side=1
-        canrecruit=yes
         controller=human
         recruit=
         shroud=yes
@@ -74,8 +73,10 @@
     [event]
         name=prestart
 
-        [unhide_unit]
-        [/unhide_unit]
+        [unstore_unit]
+            variable=alanin
+            x,y=17,4
+        [/unstore_unit]
 
         [objectives]
             side=1
@@ -407,6 +408,17 @@
         [/unit]
 
         {CLEAR_VARIABLE random}
+    [/event]
+
+    [event]
+        name=die
+        [filter]
+            id=Alanin
+        [/filter]
+
+        [endlevel]
+            result=defeat
+        [/endlevel]
     [/event]
 
     [event]
