--- a/data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg
@@ -9,8 +9,8 @@
     {DEFAULT_SCHEDULE}
 
     [side]
-        id=Alanin
-        type=Dragoon
+        no_leader=yes
+        defeat_condition=no_units_left
         save_id=Rugnur
         side=1
         canrecruit=yes
@@ -84,6 +84,11 @@
             side=2
             type=Swordsman
         [/unit]
+
+        [unstore_unit]
+            variable=alanin
+            x,y=18,1
+        [/unstore_unit]
     [/event]
 
     [event]
