SoF 7: better fitting message
[ci skip]

--- a/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
@@ -426,7 +426,7 @@
 
         [message]
             race=elf
-            message= _ "You slow humans took too long, our real reinforcements are here!"
+            message= _ "You slow humans took too long, our detachment has already caught up with you!"
             scroll=no
         [/message]
 
