SoF: make it more debug safe
also show a different message when trying to recall.

[ci skip]

--- a/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
@@ -6,6 +6,7 @@
     map_data="{campaigns/Sceptre_of_Fire/maps/7_Outriding_the_Outriders.map}"
     next_scenario=8_The_Dragon
     victory_when_enemies_defeated=no
+    disallow_recall=yes
 
     {SCENARIO_MUSIC "vengeful.ogg"}
 
@@ -17,7 +18,6 @@
         save_id=Rugnur
         side=1
         controller=human
-        recruit=
         shroud=yes
         fog=yes
         gold=0
@@ -77,6 +77,10 @@
             variable=alanin
             x,y=17,4
         [/unstore_unit]
+
+        [disallow_recruit]
+            side=1
+        [/disallow_recruit]
 
         [objectives]
             side=1
