--- a/data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg
@@ -5,6 +5,7 @@
     turns=1
     map_data="{campaigns/Sceptre_of_Fire/maps/Epilogue.map}"
     theme=Cutscene_Minimal
+    disallow_recall=yes
 
     {DEFAULT_SCHEDULE}
 
@@ -15,7 +16,6 @@
         side=1
         canrecruit=yes
         controller=human
-        recruit=Dwarvish Fighter,Dwarvish Thunderer,Dwarvish Guardsman,Dwarvish Scout,Gryphon Rider
         team_name=alanin
         user_team_name= _ "Alanin"
     [/side]
@@ -89,6 +89,9 @@
             variable=alanin
             x,y=18,1
         [/unstore_unit]
+
+        [disallow_recruit]
+        [/disallow_recruit]
     [/event]
 
     [event]
