SoF: make it more debug safe
also show a different message when trying to recall.

[ci skip]

--- a/data/campaigns/Sceptre_of_Fire/scenarios/6_Towards_the_Caves.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/6_Towards_the_Caves.cfg
@@ -571,10 +571,10 @@
                     variable=dwarves
                     kill=yes
                 [/store_unit]
-                [set_recruit]
+                # for purely flavor reasons
+                [disallow_recruit]
                     side=1
-                    recruit=
-                [/set_recruit]
+                [/disallow_recruit]
                 [show_objectives]
                 [/show_objectives]
             [/then]
