--- a/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
@@ -6,6 +6,7 @@
     map_data="{campaigns/Sceptre_of_Fire/maps/7_Outriding_the_Outriders.map}"
     next_scenario=8_The_Dragon
     victory_when_enemies_defeated=no
+    disallow_recall=yes
 
     {SCENARIO_MUSIC "vengeful.ogg"}
 
@@ -18,7 +19,6 @@
         side=1
         canrecruit=yes
         controller=human
-        recruit=
         shroud=yes
         fog=yes
         gold=0
@@ -76,6 +76,10 @@
 
         [unhide_unit]
         [/unhide_unit]
+
+        [disallow_recruit]
+            side=1
+        [/disallow_recruit]
 
         [objectives]
             side=1
