TSG S6b: dialogue revisions

--- a/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
@@ -491,7 +491,7 @@ _f, _f, Re, _f
 
         [message]
             speaker=Deoran
-            message= _ "Forest, forest, forest! As far as the eye can see, it's all forest! I am getting sick of endlessly trudging through these woods. Are you sure you're taking us in the right direction?"
+            message= _ "Forest, forest, forest! As far as the eye can see, it is all forest! I am getting sick of endlessly trudging through these woods. Are you sure you are taking us in the right direction?"
         [/message]
         [message]
             speaker=Urza Afalas
