TSG S6a: dialogue revisions

--- a/data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg
@@ -316,7 +316,7 @@
                 [/message]
                 [message]
                     speaker=Sir Gerrick
-                    message= _ "She won’t listen to us. If we leave these naga here, they will ambush Deoran and Ethiliel! We must destroy them!"
+                    message= _ "She refuses to listen! If we leave these naga here, they will ambush Deoran and Ethiliel! We must destroy them!"
                 [/message]
             [/else]
         [/if]
@@ -427,7 +427,7 @@
         [/message]
         [message]
             speaker=Abdur
-            message= _ "Unworthy fools! How dare you attack the hallowed one?! I’ll kill you for this sacrilege!"
+            message= _ "Unworthy fools! How dare you attack the hallowed one?! You must be slain for this sacrilege!"
         [/message]
     [/event]
 
