TSG S5: dialogue revisions

--- a/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
@@ -231,7 +231,7 @@
 
         [message]
             speaker=Ethiliel
-            message= _ "So, even you humans are being affected by the dark sorcery that taints this land. Then, there is no place than here. We should stop and rest before we proceed."
+            message= _ "So, even you humans are being affected by the dark sorcery that taints this land. Then, there is no better place than here. We should stop and rest before we proceed."
         [/message]
 
         [message]
@@ -671,12 +671,12 @@
 
         [message]
             speaker=Minister Hylas
-            message= _ "<i>Sir Deoran, sages and mystics of great skill and age are often the first to embrace the power of undeath. His story is likely to hold much truth to it.</i>"
+            message= _ "<i>Sir Deoran, sages and mystics of great skill and age are often the first to succumb to the taint of black magic. Wisdom and power are not enough to master undeath — the only way to conquer it is to resist the temptation altogether. If this Mebrin played a part in the summoning of these undead, I do not doubt that he was corrupted as well.</i>"
         [/message]
 
         [message]
             speaker=Sir Gerrick
-            message= _ "<i>Indeed, these elves are not as incorruptible and pure as they like to believe they are.</i>"
+            message= _ "<i>Indeed, these elves are not as incorruptible and pure as they like to believe they are. I suspect that this sage's pride led him to believe that he could master a power that is uncontrollable.</i>"
         [/message]
 
         # In the unlikely case that the player did defeat Mal M'Brin, but not sight Urza Afalas
@@ -944,7 +944,7 @@
             [then]
                 [message]
                     speaker=Sir Gerrick
-                    message= _ "Well! That was easier than I thought it’d be."
+                    message= _ "Well! That was easier than I thought it would be."
                 [/message]
                 [message]
                     speaker=Deoran
@@ -970,12 +970,12 @@
                 [/message]
                 [message]
                     speaker=Urza Afalas
-                    message= _ "Then you would surely be lost in these woods, hounded by the undead and maee into their slaves. I can lead you and your men back to the lands of Wesnoth, but only if you promise to grant me pardon."
+                    message= _ "Then you would surely be lost in these woods, hounded by the undead and made into their slaves. I can lead you and your men back to the lands of Wesnoth, but only if you promise to grant me pardon."
                 [/message]
                 [message]
                     speaker=Deoran
                     image=portraits/deoran-mad.png
-                    message= _ "Ethiliel could have dispelled these magical wards if we hadn’t fallen for your lies! But I foolishly spurned her advice and all the aid she had offered. I am of a mind to terminate your life here and now, but since elves have abandoned us... that would seem to be our only choice. But what about Mebrin? The undead will keep attacking our homes unless we root them out at the source."
+                    message= _ "Ethiliel could have dispelled these magical wards if we had not fallen for your lies! But I foolishly spurned her advice and all the aid she had offered. I am of a mind to terminate your life here and now, but since elves have abandoned us... that would seem to be our only choice. But what about Mebrin? The undead will keep attacking our homes unless we root them out at the source."
                 [/message]
                 [message]
                     speaker=Urza Afalas
