TSG S7a: dialogue revisions

--- a/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
@@ -298,7 +298,7 @@
         [/message]
         [message]
             speaker=narrator
-            message= _ "Soldiers with the <i>quick</i> trait will be useful for traversing rough cave hexes."
+            message= _ "Soldiers with the <i>quick</i> trait will be useful for traversing rough caverns."
             image=wesnoth-icon.png
         [/message]
 #endif
@@ -468,7 +468,7 @@
             [/message]
             [message]
                 speaker=Grek
-                message= _ "We lead you to bad lich. We killed dwarves and take their thunder fire. Grek put by wall behind castle. You use to attack lich."
+                message= _ "We lead you to bad lich. We killed dwarves and take their thunder fire. Grek put by wall near sand. You use to attack lich."
             [/message]
 
             [lift_fog]
@@ -571,7 +571,7 @@
                     [/message]
                     [message]
                         speaker=Deoran
-                        message= _ "<i>I don't know, trolls might not be as stupid as you think. They may be of use if we can find the gold to pay them. But for now, we have to continue on alone.</i>"
+                        message= _ "<i>I think that trolls might not be as stupid as you believe they are. They may be of use if we can find the gold to pay them. But for now, we have to continue on alone.</i>"
                     [/message]
 
                     {VARIABLE late_payment_for_troll_help yes}
