TSG S7b: dialogue revision

--- a/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
@@ -193,7 +193,7 @@
         [/message]
         [message]
             speaker=Sir Gerrick
-            message= _ "It's decided, then. Deoran, you must hasten back to Westin to prepare a defense against them. I will command the defense of the border forts. Leave me a few men, and we will hold back the undead as long as we can."
+            message= _ "Then we have only one course of action to take. Deoran, you must hasten back to Westin to prepare a defense against them. I will command the defense of the border forts. Leave me a few men, and we will hold back the undead as long as we can."
         [/message]
         [message]
             speaker=Deoran
