TSG S8b: dialogue revision

--- a/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
@@ -472,7 +472,7 @@
         [/message]
         [message]
             speaker=Deoran
-            message= _ "Your arrival couldn't be more timely. With you here, we shall send these undead back to the dark abyss that spawned them!"
+            message= _ "Your arrival could not be more timely. With you here, we shall send these undead back to the dark abyss that spawned them!"
         [/message]
         {CLEAR_VARIABLE council_arrive_turn}
     [/event]
