TSG S9a: dialogue revisions

--- a/data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg
@@ -344,7 +344,7 @@
         [/message]
         [message]
             speaker=Deoran
-            message= _ "Alas, we are far away from Weldyn. We’ll surely all be killed long before any reinforcements arrive."
+            message= _ "Alas, we are far away from Weldyn. We will surely all be killed long before any reinforcements arrive."
         [/message]
 
         [endlevel]
@@ -370,10 +370,9 @@
         [/delay]
         [message]
             speaker=Ethiliel
-            message= _ "I didn't want it to come to this, but you leave me no choice."
+            message= _ "I hoped that it would not come to this, but you leave me no choice."
         [/message]
-
-        # Added a delay too make the end of the campaign less abrupt; maybe some dialogue is better
+        
         [sound]
             name=magic-faeriefire.ogg
         [/sound]
