--- a/data/core/units/elves/Sharpshooter.cfg
+++ b/data/core/units/elves/Sharpshooter.cfg
@@ -17,7 +17,7 @@
     {AMLA_DEFAULT}
     cost=51
     usage=archer
-    description= _ "Though not a formal title, ‘Sharpshooter’ is the epithet given to the most gifted Elvish marksmen. These expert archers are capable of feats that, even by Elven standards, border on miraculous: they are precise enough to split incoming arrows midair and can loose a second arrow before the first hits, all while maintaining enough power to damage steel armor. A single volley of their arrows is enough to bring down a knight on horseback, and even heavily-armored infantry will not survive more than a few additional shots. The sharpshooters of the elves have honed their art to its highest form and are the undisputed masters of archery."+{SPECIAL_NOTES}+{SPECIAL_NOTES_MARKSMAN}
+    description= _ "Though not a formal title, ‘Sharpshooter’ is the epithet given to the most gifted Elvish marksmen. These expert archers are capable of feats that, even by Elven standards, border on miraculous: they are precise enough to split incoming arrows midair and can loose a second arrow before the first hits, all while maintaining enough power to damage steel armor. A single volley of their arrows is enough to bring down a knight on horseback, and even heavily-armored infantry will survive few additional shots. The sharpshooters of the elves have honed their art to its highest form and are the undisputed masters of archery."+{SPECIAL_NOTES}+{SPECIAL_NOTES_MARKSMAN}
     die_sound={SOUND_LIST:ELF_HIT}
     [attack]
         name=sword
