--- a/data/campaigns/Northern_Rebirth/scenarios/02_01_Infested_Caves.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/02_01_Infested_Caves.cfg
@@ -126,6 +126,10 @@
         # The Steelwart can't move; the Fighter is controlled by an Micro AI.
         {NOTRAIT_UNIT () "Dwarvish Steelclad" 31 28} {GUARDIAN} {NO_UPKEEP} {FACING se}
         {NOTRAIT_UNIT () "Dwarvish Fighter" 27 28} {NO_UPKEEP}
+        [+unit]
+            role=dwarvish_return_guard
+        [/unit]
+
         {NOTRAIT_UNIT () "Dwarvish Stalwart" 28 21} {GUARDIAN} {NO_UPKEEP}
         {NOTRAIT_UNIT () "Dwarvish Stalwart" 32 21} {GUARDIAN} {NO_UPKEEP}
         {NOTRAIT_UNIT () "Dwarvish Stalwart" 24 25} {GUARDIAN} {NO_UPKEEP} {FACING se}
@@ -209,6 +213,9 @@
 
         # controlled by Micro AI, more meatshield than guard
         {NOTRAIT_UNIT () "Skeleton Archer" 24 2} {NO_UPKEEP}
+        [+unit]
+            role=skeleton_return_guard
+        [/unit]
     [/side]
 
     # And an empty side for the bat used in flavor event
@@ -828,10 +835,7 @@
             ai_type=return_guardian
             action=add
             [filter]
-                [filter_wml]
-                    upkeep=loyal
-                [/filter_wml]
-                type=Dwarvish Fighter
+                role=dwarvish_return_guard
             [/filter]
             return_x,return_y=27,28
         [/micro_ai]
@@ -847,10 +851,7 @@
             ai_type=return_guardian
             action=add
             [filter]
-                [filter_wml]
-                    upkeep=loyal
-                [/filter_wml]
-                type=Skeleton Archer
+                role=skeleton_return_guard
             [/filter]
             return_x,return_y=24,2
         [/micro_ai]
