NR S4: Add a sound effect when Malifor flees

--- a/data/campaigns/Northern_Rebirth/scenarios/04_Clearing_the_Mines.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/04_Clearing_the_Mines.cfg
@@ -577,6 +577,9 @@
         [/message]
 
         {FLASH_RED (
+            [sound]
+                name=magic-dark-big-miss.ogg
+            [/sound]
             [kill]
                 id=Malifor
                 fire_event=yes # probably required if he's the last enemy leader
