NR S5a_01: Fix some event filters
1) Now Tallin shows surprise when Thera dies too
3) Only Malifor will scream when hit
Also add a redraw

--- a/data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg
@@ -635,24 +635,6 @@
                 [/message]
             [/else]
         [/if]
-
-        # Set up a flavor death event for the pair since they can't die in combat (see utils/herodeaths.cfg)
-        [event]
-            name=die
-            [filter]
-                id=Father Morvin
-            [/filter]
-
-            [message]
-                speaker=Tallin
-                message= _ "Wow! That’s incredible. Now I understand why the bag of bones kept you guys in jail; he just simply couldn’t kill you!"
-            [/message]
-
-            [message]
-                speaker=Sister Thera
-                message= _ "(<i>Giggle</i>)"
-            [/message]
-        [/event]
     [/event]
 
     # Sister Thera
@@ -817,6 +799,24 @@
         [message]
             speaker=unit
             message= _ "There we go. Now let’s see where this tunnel leads."
+        [/message]
+    [/event]
+
+    # Set up a flavor death event for the pair since they can't die in combat (see utils/herodeaths.cfg)
+    [event]
+        name=die
+        [filter]
+            id=Father Morvin, Sister Thera
+        [/filter]
+
+        [message]
+            speaker=Tallin
+            message= _ "Wow! That’s incredible. Now I understand why the bag of bones kept you guys in jail; he just simply couldn’t kill you!"
+        [/message]
+
+        [message]
+            speaker=Sister Thera
+            message= _ "(<i>Giggle</i>)"
         [/message]
     [/event]
 
@@ -2156,6 +2156,10 @@
             speaker=Tallin
             message= _ "Great. Forward, men!"
         [/message]
+
+        [redraw]
+            clear_shroud=yes
+        [/redraw]
     [/event]
 
     # And going forward is a sure way to find some bodies
@@ -2745,7 +2749,7 @@
         [/filter_second]
 
         [message]
-            speaker=second_unit
+            speaker=Malifor
             message= _ "AAAAAAHHHHHH!"
         [/message]
 
