--- a/data/campaigns/Northern_Rebirth/scenarios/06a_Old_Friend.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/06a_Old_Friend.cfg
@@ -91,6 +91,7 @@
         id=Drung
         name= _ "Drung"
         canrecruit=yes
+        profile=portraits/orcs/grunt-4.png
 
         [ai]
             aggression=1.0
@@ -113,6 +114,7 @@
         id=Poul
         name= _ "Poul"
         canrecruit=yes
+        profile=portraits/orcs/grunt-5.png
 
         [ai]
             aggression=1.0
