NR: Put show_if tag inside objectives

--- a/data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg
@@ -380,6 +380,16 @@
             [objective]
                 description= _ "Get past the Revenants."
                 condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL keep_reached boolean_equals no}
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Find Malifor and destroy him"
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL keep_reached boolean_equals yes}
+                [/show_if]
             [/objective]
             [objective]
                 description= _ "Death of Tallin"
@@ -390,6 +400,13 @@
                 bonus=no
                 carryover_percentage=40
             [/gold_carryover]
+
+            [note]
+                description= _ "Be sure to explore"
+                [show_if]
+                    {VARIABLE_CONDITIONAL keep_reached boolean_equals yes}
+                [/show_if]
+            [/note]
         [/objectives]
     [/event]
 
@@ -432,26 +449,9 @@
             message= _ "Let us proceed with caution. Nobody is to go off by himself. We don’t know what could be lurking in these tunnels."
         [/message]
 
-        [objectives]
-            side=1
-            [objective]
-                description= _ "Find Malifor and destroy him"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Death of Tallin"
-                condition=lose
-            [/objective]
-
-            [gold_carryover]
-                bonus=no
-                carryover_percentage=40
-            [/gold_carryover]
-
-            [note]
-                description= _ "Be sure to explore"
-            [/note]
-        [/objectives]
+        {VARIABLE keep_reached yes}
+        [show_objectives]
+        [/show_objectives]
     [/event]
 
     # From this point on we can go in five directions. Three of five
@@ -2860,7 +2860,7 @@
     [event]
         name=scenario_end
 
-        {CLEAR_VARIABLE back_door_opened,main_door_opened,spider_door_opened,got_rod_of_justice}
+        {CLEAR_VARIABLE back_door_opened,main_door_opened,spider_door_opened,got_rod_of_justice,keep_reached}
     [/event]
 
     # And the usual batch of hero death macros
