--- a/data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg
@@ -326,6 +326,18 @@
             [objective]
                 description= _ "Save Stalrag from Ro’Sothian"
                 condition=win
+                [show_if]
+                    [have_unit]
+                        id=Ro'Sothian
+                    [/have_unit]
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Capture Ro’Arthian"
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL defeat_arthian boolean_equals yes}
+                [/show_if]
             [/objective]
             [objective]
                 description= _ "Death of Tallin"
@@ -335,6 +347,8 @@
                 description= _ "Death of Stalrag"
                 condition=lose
             [/objective]
+
+            {TURNS_RUN_OUT}
 
             {AI_CONTROLLER_NOTE}
 
@@ -689,32 +703,17 @@
                 {PLACE_IMAGE "units/undead-necromancers/lich.png~RC(magenta>green)~BLIT(items/cage.png)" 25 6}
             [/event]
         [/event]
+    [/event]
 
-        # And set new objectives
-        [objectives]
-            side=1
-            [objective]
-                description= _ "Capture Ro’Arthian"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Death of Tallin"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Stalrag"
-                condition=lose
-            [/objective]
+    [event]
+        name=die
+        [filter]
+            id=Ro'Sothian
+        [/filter]
 
-            {TURNS_RUN_OUT}
-
-            {AI_CONTROLLER_NOTE}
-
-            [gold_carryover]
-                bonus=yes
-                carryover_percentage=40
-            [/gold_carryover]
-        [/objectives]
+        {VARIABLE defeat_arthian yes}
+        [show_objectives]
+        [/show_objectives]
     [/event]
 
     # If the uncooperative boss dies player wins
@@ -925,6 +924,8 @@
             ellipse="misc/ellipse-hero"
             {TRAIT_LOYAL}
         [/modify_unit]
+
+        {CLEAR_VARIABLE defeat_arthian}
     [/event]
 
     # And if the allied AI dies player loses
